[package]
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2021"
name = "foxbot"
publish = false
version = "0.7.6"

[package.metadata.release]
sign-tag = true

[features]
env = ["dotenv"]

[dependencies]
actix-web = {version = "4.0.0-rc.2", default-features = false}
anyhow = "1"
askama = "0.11"
async-trait = "0.1"
base64 = "0.13"
bigdecimal = "0.2"
bytes = "1"
chrono = "0.4"
clap = {version = "3", features = ["derive", "env"]}
dotenv = {version = "0.15", optional = true}
egg-mode = "0.16"
faktory = "0.11"
fluent-bundle = "0.15"
fluent-langneg = "0.13"
furaffinity-rs = {git = "https://github.com/Syfaro/furaffinity-rs"}
futures = "0.3"
futures-retry = "0.6"
fuzzysearch = {git = "https://github.com/Syfaro/fuzzysearch-rs", features = ["trace", "local_hash"]}
hamming = "0.1"
hex = "0.4"
hyper = {version = "0.14", features = ["server"]}
image = "0.23"
infer = "0.6"
intl-memoizer = "0.5"
lazy_static = "1"
linkify = "0.8"
opentelemetry = {version = "0.17", features = ["rt-tokio"]}
opentelemetry-http = "0.6"
opentelemetry-jaeger = "0.16"
opentelemetry-otlp = {version = "0.10"}
prometheus = {version = "0.13", features = ["process"]}
rand = "0.8"
redis = {version = "0.21", features = ["connection-manager", "tokio-comp"]}
regex = "1"
reqwest = {version = "0.11", features = ["json"]}
rusoto_core = "0.47"
rusoto_credential = "0.47"
rusoto_s3 = "0.47"
sentry = "0.24"
sentry-tracing = "0.24"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
sha2 = "0.10"
sqlx = {version = "0.5", default-features = false, features = ["runtime-tokio-native-tls", "macros", "postgres", "offline", "json", "migrate", "chrono", "bigdecimal"]}
tgbotapi = {git = "https://github.com/Syfaro/tgbotapi-rs"}
thiserror = "1"
tokio = {version = "1", features = ["rt"]}
tokio-stream = "0.1"
tracing = "0.1"
tracing-actix-web = {version = "0.5.0-rc.3", features = ["opentelemetry_0_17"]}
tracing-opentelemetry = "0.17"
tracing-subscriber = {version = "0.3", features = ["env-filter", "json"]}
twilight-cache-inmemory = "0.9"
twilight-embed-builder = "0.9"
twilight-gateway = {version = "0.9", features = ["tracing"]}
twilight-http = {version = "0.9", features = ["tracing"]}
twilight-model = "0.9"
twilight-util = {version = "0.9", features = ["builder"]}
unic-langid = "0.9"
url = "2"
uuid = "0.8"
