[package]
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2021"
name = "foxbot"
publish = false
version = "0.11.4"

[package.metadata.release]
sign-tag = true

[features]
env = ["dotenv"]

[dependencies]
actix-session = {version = "0.9", features = ["cookie-session"]}
actix-web = {version = "4", default-features = false, features = ["macros"]}
anyhow = "1"
askama = "0.12"
async-recursion = "1"
async-trait = "0.1"
base64 = "0.13"
bigdecimal = "0.3"
bytes = "1"
chrono = "0.4"
clap = {version = "4", features = ["derive", "env"]}
dotenv = {version = "0.15", optional = true}
egg-mode = "0.16"
enum-map = "2.0"
faktory = "0.12"
fluent-bundle = "0.15"
fluent-langneg = "0.13"
foxlib = { git = "https://github.com/Syfaro/foxlib.git", features = ["flags", "flags-openssl"]}
furaffinity-rs = {git = "https://github.com/Syfaro/furaffinity-rs"}
futures = "0.3"
futures-retry = "0.6"
fuzzysearch = {git = "https://github.com/Syfaro/fuzzysearch-rs", features = ["trace", "local_hash"]}
hamming = "0.1"
hex = "0.4"
hmac = "0.12"
hyper = {version = "0.14", features = ["server"]}
image = "0.23"
infer = "0.15"
intl-memoizer = "0.5"
jsonwebtoken = "9"
lazy_static = "1"
linkify = "0.10"
opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-http = "0.10"
prometheus = {version = "0.13", features = ["process"]}
rand = "0.8"
redis = {version = "0.24", features = ["connection-manager", "tokio-comp"]}
redlock = {git = "https://github.com/Syfaro/redlock-rs.git"}
regex = "1"
reqwest = {version = "0.11", features = ["json"]}
roux = "1"
rusoto_core = "0.48"
rusoto_credential = "0.48"
rusoto_s3 = "0.48"
scraper = "0.18.1"
sentry = "0.32"
sentry-tracing = "0.32"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
sha2 = "0.10"
sqlx = {version = "0.6", default-features = false, features = ["runtime-tokio-native-tls", "macros", "postgres", "offline", "json", "migrate", "chrono", "bigdecimal"]}
tgbotapi = {git = "https://github.com/Syfaro/tgbotapi-rs"}
thiserror = "1"
tokio = {version = "1", features = ["rt"]}
tokio-stream = "0.1"
tracing = "0.1"
tracing-actix-web = {version = "0.7", features = ["opentelemetry_0_21"]}
tracing-opentelemetry = "0.22"
tracing-subscriber = {version = "0.3", features = ["env-filter", "json"]}
twilight-cache-inmemory = "0.11"
twilight-gateway = "0.11"
twilight-http = "0.11"
twilight-model = "0.11"
twilight-util = {version = "0.11", features = ["builder"]}
unic-langid = "0.9"
url = "2"
uuid = "1"
