[package]
name = "fautil"
version = "0.1.0"
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

reqwest = { version = "0.10", features = ["json"] }

tracing = { version = "0.1", optional = true }
tracing-futures = { version = "0.2", optional = true }
tracing-opentelemetry = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.2", optional = true }
opentelemetry = { version = "0.1", optional = true }
log = { version = "0.4", optional = true }

[features]
trace = ["tracing", "tracing-futures", "tracing-opentelemetry", "opentelemetry", "log", "tracing-subscriber"]

[dev-dependencies]
tokio = { version = "0.2", features = ["macros"] }
