[package]
name = "foxbot-background-worker"
version = "0.4.1"
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.2"
opentelemetry = { version = "0.15", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.14", features = ["tokio"] }
tracing-opentelemetry = "0.14"

sentry = { version = "0.23", default-features = false, features = ["backtrace", "contexts", "panic", "anyhow", "reqwest", "rustls"] }
sentry-tracing = "0.23"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

envy = "0.4"
fluent = "0.12"
unic-langid = "0.9"
dotenv = { version = "0.15", optional = true }

sqlx = { version = "0.5", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "offline", "json"] }

rusoto_core = "0.47"
rusoto_credential = "0.47"
rusoto_s3 = "0.47"

faktory = "0.11"
chrono = "0.4"
tokio = "1"
redis = { version = "0.21", features = ["connection-manager", "tokio-comp"] }

image = "0.23"
hamming = "0.1"
infer = "0.5"

tgbotapi = { git = "https://github.com/Syfaro/tgbotapi-rs" }
fuzzysearch = { git = "https://github.com/Syfaro/fuzzysearch-rs", features = ["trace", "local_hash"] }

foxbot-sites = { path = "../foxbot-sites" }
foxbot-utils = { path = "../foxbot-utils"}
foxbot-models = { path = "../foxbot-models" }

[features]
env = ["dotenv"]
