[package]
name = "foxbot-channel-worker"
version = "0.1.0"
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

envy = "0.4"
dotenv = { version = "0.15", optional = true }

sqlx = { version = "0.5", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "offline", "json"] }

faktory = "0.11"
chrono = "0.4"
tokio = "1"
redis = { version = "0.20", features = ["connection-manager", "tokio-comp"] }

tgbotapi = { git = "https://github.com/Syfaro/tgbotapi-rs" }
fuzzysearch = { git = "https://github.com/Syfaro/fuzzysearch-rs", features = ["trace", "local_hash"] }

foxbot-sites = { path = "../foxbot-sites" }
foxbot-utils = { path = "../foxbot-utils"}

[features]
env = ["dotenv"]
