[package]
name = "foxbot-discord"
version = "0.1.0"
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.2"

tokio = "1.0"
futures = "0.3"

twilight-cache-inmemory = "0.3"
twilight-gateway = "0.3"
twilight-http = "0.3"
twilight-model = "0.3"

fuzzysearch = { git = "https://github.com/Syfaro/fuzzysearch-rs", features = ["trace", "local_hash"] }

foxbot-utils = { path = "../foxbot-utils" }
