[package]
name = "foxbot-discord"
version = "0.1.0"
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.2"

envy = "0.4"
dotenv = { version = "0.15", optional = true }

tokio = "1.0"
futures = "0.3"
bytes = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.5", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres"] }

twilight-cache-inmemory = "0.4"
twilight-gateway = "0.4"
twilight-http = "0.4"
twilight-model = "0.4"
twilight-embed-builder = "0.4"

linkify = "0.7"

fuzzysearch = { git = "https://github.com/Syfaro/fuzzysearch-rs", features = ["trace", "local_hash"] }

foxbot-utils = { path = "../foxbot-utils" }
foxbot-models = { path = "../foxbot-models", features = ["discord"] }
foxbot-sites = { path = "../foxbot-sites" }

[features]
env = ["dotenv"]
