[package]
name = "foxbot-models"
version = "0.3.0"
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1"
thiserror = "1"

prometheus = "0.12"
chrono = "0.4"

lazy_static = "1"

serde = "1"
serde_json = "1"

sqlx = { version = "0.5", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "offline", "json", "migrate", "time", "chrono"] }
redis = { version = "0.20", features = ["connection-manager", "tokio-comp"] }

tgbotapi = { git = "https://github.com/Syfaro/tgbotapi-rs" }
fuzzysearch = { git = "https://github.com/Syfaro/fuzzysearch-rs", features = ["trace", "local_hash"] }
