[package]
name = "foxbot-models"
version = "0.4.0"
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2018"

[features]
default = []
discord = ["twilight-model"]

[dependencies]
anyhow = "1"
thiserror = "1"
bigdecimal = "0.2"

prometheus = "0.12"
chrono = "0.4"

lazy_static = "1"

serde = "1"
serde_json = "1"

sqlx = { version = "0.5", default-features = false, features = ["macros", "postgres", "offline", "json", "migrate", "time", "chrono", "bigdecimal"] }
redis = { version = "0.21", features = ["connection-manager", "tokio-comp"] }

twilight-model = {version = "0.5", optional = true}

tgbotapi = { git = "https://github.com/Syfaro/tgbotapi-rs" }
fuzzysearch = { git = "https://github.com/Syfaro/fuzzysearch-rs", features = ["trace", "local_hash"] }
