[package]
name = "foxbot-utils"
version = "0.3.1"
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1"
tracing = "0.1"
tracing-futures = "0.2"

opentelemetry = "0.16"
tracing-opentelemetry = "0.15"
opentelemetry-http = "0.5"

sentry = { version = "0.23", features = ["anyhow"] }

futures = "0.3"
tokio = { version = "1", features = ["sync"] }
tokio-stream = "0.1"

rand = "0.8"
fluent = "0.12"
fluent-langneg = "0.13"
unic-langid = "0.9"

sha2 = "0.9"
image = "0.23"
bytes = "1"
hex = "0.4"
hamming = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.5", default-features = false, features = ["macros", "postgres", "json"] }
redis = { version = "0.21", features = ["connection-manager", "tokio-comp"] }

reqwest = { version = "0.11", features = ["json"] }
rusoto_s3 = "0.47"

tgbotapi = { git = "https://github.com/Syfaro/tgbotapi-rs" }
fuzzysearch = { git = "https://github.com/Syfaro/fuzzysearch-rs", features = ["trace", "local_hash"] }

foxbot-sites = { path = "../foxbot-sites" }
foxbot-models = { path = "../foxbot-models" }

[dev-dependencies]
linkify = "0.7"
