[package]
name = "foxbot"
version = "0.1.1"
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2018"

[features]
env = ["dotenv"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
linkify = "0.5"
rand = "0.7"
async-trait = "0.1"
fluent = "0.12"
fluent-langneg = "0.13"
unic-langid = "0.9"
hyper = { version = "0.14", features = ["server"] }
url = "2"
hamming = "0.1"
handlebars = { version = "3", features = ["dir_source"] }
dotenv = { version = "0.15", optional = true }

sentry = { version = "0.22", default-features = false, features = ["backtrace", "contexts", "panic", "anyhow", "reqwest", "debug-logs"] }
uuid = "0.8"
anyhow = "1"
lazy_static = "1"
prometheus = { version = "0.12", features = ["process"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
envy = "0.4"

egg-mode = { git = "https://github.com/egg-mode-rs/egg-mode" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
faktory = "0.11"

tgbotapi = { git = "https://github.com/Syfaro/tgbotapi-rs" }
fuzzysearch = { git = "https://github.com/Syfaro/fuzzysearch-rs", features = ["trace", "local_hash"] }

tracing = "0.1"
tracing-subscriber = "0.2"
opentelemetry = "0.6"
opentelemetry-jaeger = "0.5"
tracing-opentelemetry = "0.5"

redis = { version = "0.20", features = ["connection-manager", "tokio-comp"] }
sqlx = { version = "0.5", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "offline", "json", "migrate", "time"] }

rusoto_core = "0.46"
rusoto_credential = "0.46"
rusoto_s3 = "0.46"

foxbot-sites = { path = "../foxbot-sites" }
foxbot-models = { path = "../foxbot-models" }
foxbot-utils = { path = "../foxbot-utils" }
