[package]
name = "foxbot"
version = "0.5.0"
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2018"
publish = false

[features]
env = ["dotenv"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
linkify = "0.8"
rand = "0.8"
async-trait = "0.1"
fluent = "0.12"
fluent-langneg = "0.13"
unic-langid = "0.9"
hyper = { version = "0.14", features = ["server"] }
url = "2"
hamming = "0.1"
handlebars = { version = "4", features = ["dir_source"] }
dotenv = { version = "0.15", optional = true }
base64 = "0.13"
sha2 = "0.10"
chrono = "0.4"

sentry = { git = "https://github.com/getsentry/sentry-rust", default-features = false, features = ["backtrace", "contexts", "panic", "anyhow", "reqwest"] }
sentry-tracing = { git = "https://github.com/getsentry/sentry-rust" }
uuid = "0.8"
anyhow = "1"
lazy_static = "1"
prometheus = { version = "0.13", features = ["process"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
envy = "0.4"

egg-mode = "0.16"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
faktory = "0.11"

tgbotapi = { git = "https://github.com/Syfaro/tgbotapi-rs" }
fuzzysearch = { git = "https://github.com/Syfaro/fuzzysearch-rs", features = ["trace", "local_hash"] }

tracing = "0.1"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "local-time"] }
opentelemetry = { version = "0.16", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.15", features = ["rt-tokio"] }
tracing-opentelemetry = "0.16"
opentelemetry-http = "0.5"

redis = { version = "0.21", features = ["connection-manager", "tokio-comp"] }
sqlx = { version = "0.5", default-features = false, features = ["runtime-tokio-native-tls", "macros", "postgres", "offline", "json", "migrate", "time"] }

rusoto_core = "0.47"
rusoto_credential = "0.47"
rusoto_s3 = "0.47"

actix-web = "4.0.0-beta.13"
actix-http = "3.0.0-beta.14"
tracing-actix-web = { version = "0.5.0-beta.4", features = ["opentelemetry_0_16"] }
actix-web-httpauth = "0.6.0-beta.4"

foxbot-sites = { path = "../foxbot-sites" }
foxbot-models = { path = "../foxbot-models" }
foxbot-utils = { path = "../foxbot-utils" }
