[package]
name = "telegram"
version = "0.1.0"
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.10", features = ["json"] }
log = "0.4"
failure = "0.1"

tracing = { version = "0.1", optional = true }
tracing-futures = { version = "0.2", optional = true }

[features]
trace = ["tracing", "tracing-futures"]
